force-app/main/default/objects/FieloPLT__Triggers__c/fields/AnswerOption__c.field-meta.xml
<CustomField>
    <fullName>AnswerOption__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Answer Option</label>
    <type>Checkbox</type>
</CustomField>