force-app/main/default/objects/FieloPLT__Triggers__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Course</label>
    <type>Checkbox</type>
</CustomField>