force-app/main/default/objects/FieloPLT__Triggers__c/fields/CourseDependency__c.field-meta.xml
<CustomField>
    <fullName>CourseDependency__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Course Dependency</label>
    <type>Checkbox</type>
</CustomField>