force-app/main/default/objects/FieloPLT__Triggers__c/fields/CourseStatus__c.field-meta.xml
<CustomField>
    <fullName>CourseStatus__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Course Status</label>
    <type>Checkbox</type>
</CustomField>