force-app/main/default/objects/FieloPLT__Triggers__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Module</label>
    <type>Checkbox</type>
</CustomField>