force-app/main/default/objects/FieloPLT__Triggers__c/fields/ModuleDependency__c.field-meta.xml
<CustomField>
    <fullName>ModuleDependency__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Module Dependency</label>
    <type>Checkbox</type>
</CustomField>