force-app/main/default/objects/FieloPLT__Triggers__c/fields/ModuleResponse__c.field-meta.xml
<CustomField>
    <fullName>ModuleResponse__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Module Response</label>
    <type>Checkbox</type>
</CustomField>