force-app/main/default/objects/FieloPLT__Triggers__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Question</label>
    <type>Checkbox</type>
</CustomField>