force-app/main/default/objects/FieloPLT__Triggers__c/fields/QuestionResponse__c.field-meta.xml
<CustomField>
    <fullName>QuestionResponse__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Question Response</label>
    <type>Checkbox</type>
</CustomField>